@@ -1,0 +1,1 @@
+This module implements home directory auto-creation fro webDAV shares
